# mvp

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  a.json  docker-compose.yml  pyproject.toml
.github/workflows/: production.yml  staging.yml
app/: manage.py  run.sh
app/accounts/: admin.py  apps.py  graphql.py  managers.py  models.py  signals.py  types.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_auto_20201213_1650.py  0002_auto_20201213_1753.py  0002_user_alias.py  0003_emaillistentry.py  0003_remove_user_twilio_account_sid.py  0004_auto_20210309_1923.py  0004_user_extra_tickets_ttl.py  0004_user_rut.py  0005_user_indices.py  0005_user_winnings.py  0006_auto_20201216_2129.py
app/app/: base.py  email.py  graphql.py  local_settings.example.py  schema.py  set_settings_module.py  settings.py  urls.py  utils.py  views.py  wsgi.py
app/app/templates/: investors.html  landing.html  landing_page.html
app/banking/: admin.py  apps.py  fintoc.py  models.py  signals.py
app/banking/migrations/: 0001_initial.py  0002_auto_20210311_1700.py
app/bot/: apps.py  commands.py  common_handlers.py  handlers.py  multisender.py  sender.py  telegram.py  twilio.py  urls.py  utils.py  views.py
app/bot/telegram/: decorators.py  handlers.py  replier.py  sender.py  states.py  utils.py
app/bot/twilio/: replier.py  sender.py
app/lottery/: admin.py  apps.py  models.py  urls.py
app/movements/: admin.py  fintoc.py  models.py  signals.py
app/scheduler/: admin.py  apps.py  helpers.py  main.py  models.py  signals.py  tasks.py
(+19 files in other folders)
