[tool.poetry]
name = "conyappa-mvp"
version = "0.13.1"
description = "The prize-linked savings account."
authors = [
    "Alex Apt Iberkleid <aapt@uc.cl>",
    "Ariel Martínez Silberstein <amartinez5@uc.cl>",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
django = "^3.1.4"
djangorestframework = "^3.12.2"
gunicorn = "^20.0.4"
dj_database_url = "^0.5.0"
sentry_sdk = "^0.19.4"
django-cors-headers = "^3.5.0"
psycopg2-binary = "^2.8.6"
whitenoise = "^5.2.0"
requests = "^2.25.0"
apscheduler = "^3.6.3"
phonenumbers = "^8.12.14"
django-phonenumber-field = "^5.0.0"
twilio = "^6.50.0"
python-telegram-bot = "^13.1"
inflection = "^0.5.1"
django-extensions = "^3.1.0"
django-admin-numeric-filter = "^0.1.6"
graphene-django = "^2.15.0"
fintoc = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pydotplus = "^2.0.2"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38"]
exclude = '/(\.venv|migrations)/'

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
